# knowledge-agent

./: .dockerignore  .env.example  .gitignore  AGENT_DESIGN.md  ARCHITECTURE.md  CLAUDE.md  DEMO.md  DEVLOG.md  DEV_SPEC.md  Dockerfile  ERROR_HANDLING.md  EVAL_PLAN.md  INTERVIEW_QA.md  Makefile  PRD.md  README.md  ROADMAP.md  SECURITY.md  TESTING_GUIDE.md  TOOLS.md  advice_by_gpt.md  main.py  pyproject.toml  requirements.txt  test_demo.ps1
data/test_docs/: rag_intro.md
docs/adr/: 0001-use-fastapi.md  0002-use-vector-db-for-code-search.md  0003-why-single-agent-first.md  0004-add-tracing-and-evals.md
prompts/: CHANGELOG.md  system_prompt.md
src/: agent.py  api.py  config.py  rag.py  tools.py
tests/: test_agent.py  test_api.py  test_rag.py  test_tools.py
